<resources>
    <string name="app_name">IQM</string>
    <string name="title_home">Início</string>
    <string name="title_dashboard">Painel</string>
    <string name="title_notifications">Avisos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cad_subject">Cad. Subject</string>
    <string name="title_cad_question">Cad. Question</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="subjects">Subjects:</string>
    <string name="name">Name:</string>
    <string name="title_con_question">con. question</string>

    <string-array name="list_subject"> 
        <item>Matemática</item> 
        <item>Inglês</item> 
        <item>Português</item> 
    </string-array>
</resources>