<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ukmi.iqmsoluction.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ukmi.iqmsoluction.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ukmi.iqmsoluction.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_cad_subject"
        android:name="com.ukmi.iqmsoluction.ui.subject.CadSubjectFragment"
        android:label="@string/title_cad_subject"
        tools:layout="@layout/fragment_cad_subject" />

    <fragment
        android:id="@+id/navigation_cad_question"
        android:name="com.ukmi.iqmsoluction.ui.question.CadQuestionFragment"
        android:label="@string/title_cad_question"
        tools:layout="@layout/fragment_cad_question" />

    <fragment
        android:id="@+id/navigation_con_question"
        android:name="com.ukmi.iqmsoluction.ui.question.conQuestionFragment"
        android:label="@string/title_con_question"
        tools:layout="@layout/fragment_con_question_list" />
</navigation>